--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
-  <h1>絵馬に願い事を合成する</h1>
+  <h1>ミルミカ神社に絵馬を書く</h1>
   <canvas id="canvas" width="500" height="300"></canvas>
   <div id="controls">
     <input type="text" id="textInput" placeholder="願い事を入力" size="30">
