Update index.html with text wrapping feature

--- a/index.html
+++ b/index.html
@@ -37,6 +37,27 @@
       ctx.drawImage(emaImage, 0, 0, canvas.width, canvas.height);
     };
 
+    // テキストを改行して描画する関数
+    function drawText(text, x, y, maxWidth) {
+      const words = text.split(' ');
+      let line = '';
+      const lineHeight = 30; // 行間の調整
+
+      for (let i = 0; i < words.length; i++) {
+        const testLine = line + words[i] + ' ';
+        const testWidth = ctx.measureText(testLine).width;
+
+        if (testWidth > maxWidth) {
+          ctx.fillText(line, x, y);
+          line = words[i] + ' ';
+          y += lineHeight;
+        } else {
+          line = testLine;
+        }
+      }
+      ctx.fillText(line, x, y); // 最後の行を描画
+    }
+
     // テキストを合成する
     document.getElementById('generateBtn').addEventListener('click', () => {
       const text = document.getElementById('textInput').value;
@@ -45,7 +66,12 @@
       ctx.font = '24px Arial';
       ctx.fillStyle = 'black';
       ctx.textAlign = 'center';
-      ctx.fillText(text, canvas.width / 2, canvas.height / 2);
+
+      const maxWidth = canvas.width - 40; // キャンバスの幅を基に最大幅を設定
+      const x = canvas.width / 2;
+      const y = canvas.height / 2 - 60; // 少し上に描画開始位置を調整
+
+      drawText(text, x, y, maxWidth);
     });
 
     // ダウンロード機能
