--- a/index.html
+++ b/index.html
@@ -16,13 +16,20 @@
     #controls {
       margin-top: 20px;
     }
+    textarea {
+      width: 300px;
+      height: 100px;
+      resize: none;
+      font-size: 16px;
+    }
   </style>
 </head>
 <body>
   <h1>ミルミカ神社に絵馬を書く</h1>
-  <canvas id="canvas" width="500" height="300"></canvas>
+  <canvas id="canvas" width="360" height="262"></canvas>
   <div id="controls">
-    <input type="text" id="textInput" placeholder="願い事を入力" size="30">
+    <!-- <input>を<textarea>に変更 -->
+    <textarea id="textInput" placeholder="願い事を入力" wrap="hard"></textarea>
     <button id="generateBtn">生成</button>
     <button id="downloadBtn">ダウンロード</button>
   </div>
@@ -39,23 +46,13 @@
 
     // テキストを改行して描画する関数
     function drawText(text, x, y, maxWidth) {
-      const words = text.split(' ');
-      let line = '';
+      const lines = text.split('\n'); // 改行を処理
+
       const lineHeight = 30; // 行間の調整
-
-      for (let i = 0; i < words.length; i++) {
-        const testLine = line + words[i] + ' ';
-        const testWidth = ctx.measureText(testLine).width;
-
-        if (testWidth > maxWidth) {
-          ctx.fillText(line, x, y);
-          line = words[i] + ' ';
-          y += lineHeight;
-        } else {
-          line = testLine;
-        }
+      for (let i = 0; i < lines.length; i++) {
+        ctx.fillText(lines[i], x, y);
+        y += lineHeight;
       }
-      ctx.fillText(line, x, y); // 最後の行を描画
     }
 
     // テキストを合成する
@@ -69,7 +66,7 @@
 
       const maxWidth = canvas.width - 40; // キャンバスの幅を基に最大幅を設定
       const x = canvas.width / 2;
-      const y = canvas.height / 2 - 60; // 少し上に描画開始位置を調整
+      const y = canvas.height / 2 - 60; // キャンバスの中心を基に少し上に描画開始位置を調整
 
       drawText(text, x, y, maxWidth);
     });
